src/test/ui/type/type-ascription-with-fn-call.stderr
error[E0573]: expected type, found function `f`
  --> $DIR/type-ascription-with-fn-call.rs:6:5
   |
LL |     f()  :
   |          - help: maybe you meant to write `;` here
LL |     f();
   |     ^^^
   |     |
   |     not a type
   |     expecting a type here because of type ascription

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
